--- a/src/app/heroes/listado/listado.component.html
+++ b/src/app/heroes/listado/listado.component.html
@@ -1,9 +1,13 @@
-<p>listado de Héroes</p>
+<h1>Listado de Héroes</h1>
 
-<div>
-  <h3>Héroe borrado</h3>
-  <span> {{ heroeBorrado }} </span>
+<div *ngIf = " heroeBorrado; else noborrado">
+  <h3 >Héroe borrado:  <small> {{ heroeBorrado }} </small> </h3>
 </div>
+
+<ng-template #noborrado>
+  <h3 >No ha borrado nada.</h3>
+</ng-template>
+
 
 <button (click)="borrarHeroe()">Borrar</button>
 
