--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,6 @@ html, body {
   -webkit-font-smoothing: antialiased;
 }
 
-
 dd {
   font-weight: bold;
 }
@@ -39,3 +38,17 @@ button:focus{
   padding: 1px;
 }
 /* You can add global styles to this file, and also import other style files */
+
+.row {
+  display: flex;
+}
+
+.col {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+input {
+  display: block;
+  margin: 5px;
+}
