--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -5,14 +5,12 @@
 
 <div class="row">
 
-  <div class="col"><h3>Personajes</h3>
-    <hr>
+  <div class="col">
+    <app-personajes [personajes]="personajes">
 
-    <ul>
-      <li>Krillin - 700</li>
-      <li>Goko - 15,000</li>
-      <li>Begeta - 8,500</li>
-    </ul>
+    </app-personajes>
+
+
   </div>
 
   <div class="col">
@@ -36,7 +34,6 @@
         [placeholder]="nuevo.poder"
         name="poder"
         [(ngModel)]="nuevo.poder"
-
        />
 
       <button type="submit">
