--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -6,42 +6,14 @@
 <div class="row">
 
   <div class="col">
-    <app-personajes [personajes]="personajes">
-
-    </app-personajes>
-
-
+    <app-personajes [personajes]="personajes"></app-personajes>
   </div>
 
   <div class="col">
-
-    <h3>Agregar</h3>
-    <hr>
-
-    <form (ngSubmit)="agregar()">
-      <input
-        type="text"
-        placeholder="Nombre"
-        name="nombre"
-        [(ngModel)]="nuevo.nombre"
-      />
-
-      <!--  [value]="nuevo.nombre"
-        (input) = " cambiarNombre( $event ) " -->
-
-      <input
-        type="number"
-        [placeholder]="nuevo.poder"
-        name="poder"
-        [(ngModel)]="nuevo.poder"
-       />
-
-      <button type="submit">
-          Agregar
-      </button>
-
-    </form>
-
+    <app-agregar
+      [nuevo]="nuevo"
+      [personajes]="personajes"
+    ></app-agregar>
   </div>
 
 </div>
