--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -12,7 +12,7 @@
   <div class="col">
     <app-agregar
       [nuevo]="nuevo"
-      [personajes]="personajes"
+      (onNuevoPersonaje)="agregarNuevoPersonaje( $event )"
     ></app-agregar>
   </div>
 
